<resources>
    <string name="app_name" translatable="false">Scootin</string>
    <string name = "google_maps_key" translatable="false">AIzaSyBV57UA9d4G4J1Z2XnZFiGykdv0ZLcaAuI</string>
    <string name = "razor_pay_live_api_key" translatable="false">rzp_live_fSGWPuPmHoftaB</string>
    <string name = "razor_pay_test_api_key" translatable="false">rzp_test_ViMbF78xEGQbRd</string>

    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_phone_number">Mobile Number</string>
    <string name="login_otp">OTP</string>
    <string name="default_address"><u>Default Delivery Address</u></string>
    <string name="done">Done</string>
    <string name="select_category">Select Category</string>

    <string name="category_disabled">This category is not available. In accordance with government regulations we currently are supplying essential items only.</string>

    <!-- Error messages -->
    <string name="error_message_invalid_mobile">Please provide a valid mobile number</string>
    <string name="error_message_invalid_email">Please provide a email address</string>
    <string name="error_message_invalid_otp">Please provide a valid OTP</string>
    <string name="error_message_select_terms">Please accept Terms &amp; Conditions</string>
    <string name="server_error">Server error, try again later !!</string>


    <!-- Success Messages -->
    <string name="success_message_otp">OTP has been send to %1$s</string>


    <string name="type_your_list_additionaly_you_can_mention_size_also_e_g_coke_250ml">Type your list, additionaly you can mention size also E.g Coke 250ml</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="query_hint">Search</string>
    <string name="query_hint_veg">Search Vegetable or fruit</string>
    <string name="query_hint_medicine">Search by Store</string>
    <string name="edittxt_hint">Phone No. (10 Digits)</string>
    <string name="edittxt_hint_citywide">Current Location(Home) | Type a new Address</string>
    <string name="edittxt_hint_express_mobile">Mobile No.(Incase something is unclear or unavailable from the list)</string>
    <string name="customer_support_number">+919557667996</string>

    <string name="edittxt_hint_payment">Delivery Location(Home) | Type a new Address</string>

    <string name="edittxt_hint_eng_mobno">Mobile No.</string>
    <string name="edittxt_hint_OTP">OTP</string>
    <string name="edittxt_hint_Pin">City Pin Code</string>
    <string name="edittxt_card_exp_date">MM/YY</string>
    <string name="edittxt_card_name">Name on card</string>
    <string name="edittxt_security_code">Security Code</string>

    <string name="edittxt_user_name"><font size="15" fontfamily="@font/montserrat_bold">Name Surname</font></string>
    <string name="edittxt_user_mob_no"><font size="15" fontfamily="@font/montserrat_bold">Pre Added</font></string>
    <string name="edittxt_user_address"><font size="15" fontfamily="@font/montserrat_bold">H.no/Flat No., Building/Society Name</font></string>
    <string name="edittxt_user_area"><font size="15" fontfamily="@font/montserrat_bold">Street, Ward, Colony Name</font></string>
    <string name="edittxt_user_email"><font size="15" fontfamily="@font/montserrat_bold">abc@xyz.com</font></string>
    <string name="edittxt_user_city"><font size="15" fontfamily="@font/montserrat_bold">City Name</font></string>
    <string name="edittxt_user_pin"><font size="15" fontfamily="@font/montserrat_bold">0123456</font></string>
    <string name="edittxt_item1"><font size="15" fontfamily="@font/montserrat_bold">Item 01</font></string>
    <string name="edittxt_item2"><font size="15" fontfamily="@font/montserrat_bold">Item 02</font></string>
    <string name="edittxt_item3"><font size="15" fontfamily="@font/montserrat_bold">Item 03</font></string>
    <string name="edittxt_item4"><font size="15" fontfamily="@font/montserrat_bold">Item 04</font></string>
    <string name="edittxt_user_state"><font size="15" fontfamily="@font/montserrat_bold">State Name</font></string>
    <string name="edittxt_orderid_call_support"><font size="12" fontfamily="@font/montserrat_bold">Enter Order ID for Call Support</font></string>

    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="full_name">Full Name</string>
    <string name="default_delivery_address">Add new address</string>
    <string name="name_surname">Name Surname</string>
    <string name="pre_added">Pre Added</string>
    <string name="email_id">Email ID</string>
    <string name="h_no_flat_no_building_society_name">H.No/Flat No., building/Society Name</string>
    <string name="street_ward_colony_name">Street/ Ward/ Colony Name</string>
    <string name="_0123456">0123456</string>
    <string name="state_name">State Name</string>
    <string name="home">Home</string>
    <string name="phone_no">Phone No.</string>
    <string name="city">City</string>
    <string name="home_radio_button">home Radio Button</string>
    <string name="my_order">My Order</string>
    <string name="save_cart">Save Cart</string>
    <string name="feedback">feedback</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="state">State</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="finding_location">Finding location..</string>
    <string name="OrderID">Order ID:</string>
    <string name="_250">250</string>
    <string name="separator">/</string>
    <string name="_0">0</string>
    <string name="or_contact_us_for_older_orders">Or Contact Us For Older Orders</string>
    <string name="enter_order_id_for_call_support">Enter Order Id For Call Support</string>

    <string name="_0720280002">#0720280002</string>
    <string name="essential_grocery"><![CDATA[Essential & Grocery]]></string>
    <string name="help">HELP</string>
    <string name="ongoing">Ongoing</string>
    <string name="_27_07_2020">27.07.2020</string>
    <string name="track">Track</string>
    <string name="delivered">Delivered</string>
    <string name="sweet">Sweet</string>
    <string name="view_detail">View Details</string>
    <string name="cancelled">Cancelled</string>
    <string name="placed_on_wed_26_aug_20_04_38_pm">Placed on Wed, 26 Aug 20, 04:38 PM</string>
    <string name="delivery_on">Delivery On</string>

    <string name="placed_on_wed_26_aug_20_08_00_pm_09_00_pm">Placed on Wed, 26 Aug 20, 08:00 PM- 09:00 PM</string>
    <string name="pay_on_delivery">Payment Mode</string>
    <string name="scootin">Scootin</string>
    <string name="wallet">Wallet</string>
    <string name="_30_items">30 Items</string>
    <string name="amount_rs_3250">Order Amount</string>
    <string name="item_01">Item 01</string>
    <string name="rs_152">Rs. 152.00</string>
    <string name="item_02">item 02</string>
    <string name="rs_192">Rs. 192.00</string>
    <string name="rs_205_00">Rs. 205.00</string>
    <string name="item_03">item 03</string>
    <string name="item_04">item 04</string>
    <string name="rs_40_00">Rs. 40.00</string>
    <string name="rs_708_00">Rs. 708.00</string>
    <string name="item_05">item 05</string>
    <string name="rs_430_00">Rs. 430.00</string>
    <string name="item_06">item 06</string>
    <string name="rs_128_00">Rs. 128.00</string>
    <string name="item_07">item 07</string>

    <string name="name">Full Name</string>


    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="pin">Pin</string>
    <string name="shop_by_product_or_store">Explore and shop by product or store</string>
    <string name="upload_a_photo_of_hand_written_list">Upload a hand written list of items</string>
    <string name="grocery_order_instruction">Please provide a clear and readable photo.\n\nPlease provide your mobile number also so that we can call you incase something is unclear or unnavailable from the list</string>

    <string name="string_essentials">Essentials &amp; Grocery</string>
    <string name="string_sweet">Sweets, Bakery &amp; Snacks</string>
    <string name="string_vegitable">Vegetables &amp; Fruits</string>
    <string name="string_medicines">Medicines</string>
    <string name="string_stationary">Cosmetics &amp; Personal Care</string>
    <string name="string_clothing">Clothing</string>

    <string name="order_update_message">Your order has been updated</string>

    <!-- Lets handle this -->

    <string name="order_has_been_placed">Order has been placed</string>
    <string name="order_has_been_received">Order has been Picked up by rider</string>
    <string name="order_not_confirm">Order has not been confirm by shop</string>
    <string name="order_has_been_packed">Order has been packed</string>
    <string name="order_has_been_dispatched">Order has been dispatched</string>
    <string name="order_has_been_completed">Order has been completed</string>
    <string name="order_has_been_cancelled">Order has been cancelled</string>
    <string name="dialogTitle">Cancel Order</string>
    <string name="logOutDialogTitle">Logout</string>
    <string name="dialogMessage">Are you sure you want to cancel this order?</string>
    <string name="addressCheck">Please confirm your address before placing order</string>
    <string name="logoutDialogMessage">Are you sure you want to Logout?</string>

    <string name="order_not_confirm_by_rider">Order has not been confirm by Rider</string>
    <string name="order_not_pay">Please pay the amount</string>

    <string name="city_wide_order_pay">Order will be delivered soon</string>

    <string name="login_terms_and_condition">By Signing In, I agree to Terms &amp; Conditions</string>
    <string name="citywide_terms_and_condition">I agree to Terms &amp; Conditions</string>
    <string name="store_name">Store Name</string>

    <string name="error_no_internet">No internet connection.</string>
    <string name="service_area_not_selected">Please select a service area</string>

    <string name="continue_btn">Continue</string>
    <string name="otp_message">OTP will be sent to your number for verification</string>
    <string name="prefilled">Pre-Filled from previous page</string>
    <string name="expires_in">Expires in</string>
    <string name="please_enter_otp_text">Please enter OTP text</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="full_name_">Full Name*</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth* DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="send_otp">Send OTP</string>
    <string name="city_">City*</string>
    <string name="order_date_and_time"><![CDATA[Order Date & Time]]></string>
    <string name="order_type">Order Type</string>
    <string name="order_status">Order Status</string>
    <string name="order_amount">Order Amount</string>
    <string name="upload_photo_txt">Touch here to take a photo of the list or upload one from the gallery.*</string>
    <string name="shop_detail">Shop Detail</string>
    <string name="delivery_detail">Delivery Detail</string>
    <string name="express_home_txt">Upto 10 items<br/> Within 45 Min</string>
    <string name="citywidehome_txt">Anything-Anywhere <br/> within city limits</string>
</resources>
