<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_ex_dlvr_card_on_store_page"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <androidx.cardview.widget.CardView
        android:id="@+id/category_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="50dp"
        android:layout_marginTop="208dp"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="292dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/stroke_rectangle">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_select_an_option"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/materialRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="252"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/string_essentials"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="#808080"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:buttonTint="#808080"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/materialRadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:buttonTint="#808080"
                android:textColor="#808080"
                android:tag="253"
                android:selectAllOnFocus="false"
                android:text="@string/string_sweet"
                android:textStyle="bold"
                android:textSize="13sp" />
            <RadioButton
                android:id="@+id/materialRadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:buttonTint="#808080"
                android:textColor="#808080"
                android:selectAllOnFocus="false"
                android:tag="254"
                android:text="@string/string_vegitable"
                android:textStyle="bold"
                android:textSize="13sp" />
            <RadioButton
                android:id="@+id/materialRadioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:buttonTint="#808080"
                android:textColor="#808080"
                android:selectAllOnFocus="false"
                android:tag="255"
                android:text="@string/string_medicines"
                android:textStyle="bold"
                android:textSize="13sp" />
            <RadioButton
                android:id="@+id/materialRadioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:buttonTint="#808080"
                android:textColor="#808080"
                android:tag="256"
                android:selectAllOnFocus="false"
                android:text="@string/string_stationary"
                android:textStyle="bold"
                android:textSize="13sp" />
            <RadioButton
                android:id="@+id/materialRadioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:buttonTint="#808080"
                android:textColor="#808080"
                android:tag="257"
                android:selectAllOnFocus="false"
                android:text="@string/string_clothing"
                android:textStyle="bold"
                android:textSize="13sp" />
        </RadioGroup>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:padding="20dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_done_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>