<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shoppingBagLogo"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sopping_bag_card" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_total_amt_payable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Total Amount Payable"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/baseline"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Rs. 569.00"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/baseline"
            app:layout_constraintStart_toEndOf="@+id/txt_total_amt_payable" />

        <View
            android:id="@+id/baseline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@color/text_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoppingBagLogo" />

        <RelativeLayout
            android:id="@+id/card_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/baseline"
            android:background="@drawable/ic_payment_cad_graphics">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="90dp"
                android:hint="0000 0000 0000 0000"
                android:textColorHint="#fff"
                android:textStyle="bold"
                android:inputType="number"
                android:textColor="#fff"
                android:background="@null"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/valid_thru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="122dp"
                android:textSize="14sp"
                android:background="@null"
                android:textColor="#fff"
                android:hint="@string/edittxt_card_exp_date"
                android:textColorHint="#fff"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name_on_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="14sp"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/edittxt_card_name"
                android:textColorHint="#fff"
                android:textStyle="bold"
                android:layout_marginTop="145dp"
                android:layout_marginLeft="22dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/security_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="14sp"
                android:background="@null"
                android:hint="@string/edittxt_security_code"
                android:textColorHint="#fff"
                android:textStyle="bold"
                android:inputType="numberPassword"
                android:layout_marginTop="145dp"
                android:layout_marginLeft="205dp"
                android:maxLength="3"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_background"
            app:srcCompat="@drawable/ic_pay_now_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>